# inscribe-text-editor

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: c-cpp.yml
src/: EditorWindow.h  main.cpp
src/FileManager/: FileManager.cpp  FileManager.h  TextHandler.cpp  TextHandler.h
src/Utils/Logging/: ConsoleLog.h  Logger.cpp  Logger.h
